# SwanBsDiffApk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/swan/swanbsdiffapk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bsdiff.c  native-lib.cpp
app/src/main/java/com/swan/swanbsdiffapk/: BsPatch.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/swan/swanbsdiffapk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
